--- a/literatur.bib
+++ b/literatur.bib
@@ -1,3 +1,12 @@
+@article{bishop2006pattern,
+  title={Pattern recognition},
+  author={Bishop, Christopher M},
+  journal={Machine Learning},
+  volume={128},
+  pages={1--58},
+  year={2006}
+}
+
 @book{AI3,
 	author={Jeff Heaton},
 	title={Artificial Intelligence for Humans},
